--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/react": "^11.2.7",
     "@web/test-runner": "^0.13.4",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
     "chai": "^4.3.4",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "rescript": "^9.1.2",
-    "snowpack": "~3.0"
+    "snowpack": "^3.4.0"
   },
   "prettier": {
     "singleQuote": true,
