Install @ryyppy/rescript-promise

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -23,8 +23,9 @@
     }
   ],
   "bs-dependencies": [
-    "bs-fetch",
     "@rescript/react",
+    "@ryyppy/rescript-promise",
+    "bs-fetch",
     "bs-webapi"
   ],
   "bs-dev-dependencies": []
