--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@rescript/react": "^0.10.3",
+    "@ryyppy/rescript-promise": "^2.1.0",
     "dompurify": "^2.2.8",
     "marked": "^2.0.3",
     "react": "^17.0.2",
