Stick snowpack version to 3.0 as a workaround of broken build

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "chai": "^4.3.4",
     "prettier": "^2.3.0",
     "rescript": "^9.1.2",
-    "snowpack": "^3.4.0"
+    "snowpack": "~3.0"
   },
   "prettier": {
     "singleQuote": true,
