--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "format:js": "prettier --write \"**/*.{js,json,md,yml}\"",
     "format:res": "rescript format -all",
     "start": "snowpack dev",
-    "test": "web-test-runner \"src/**/__tests__/*.bs.js\"",
+    "test": "web-test-runner \"src/**/*.test.bs.js\"",
     "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
     "dompurify": "^2.2.8",
-    "marked": "^2.0.3",
+    "marked": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -34,12 +34,12 @@
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "@snowpack/web-test-runner-plugin": "^0.2.2",
     "@testing-library/react": "^11.2.7",
-    "@web/test-runner": "^0.13.4",
+    "@web/test-runner": "^0.13.5",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
     "chai": "^4.3.4",
     "prettier": "^2.3.0",
-    "rescript": "^9.1.2",
+    "rescript": "^9.1.3",
     "snowpack": "~3.0"
   },
   "prettier": {
