--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "author": "Jihchi Lee <achi@987.tw>",
   "license": "MIT",
   "keywords": [
-    "ReScript",
+    "ReasonML",
     "BuckleScript",
     "reason-react",
-    "ReasonML",
+    "ReScript",
+    "rescript-react",
     "react"
   ],
   "scripts": {
@@ -17,8 +18,7 @@
     "format:js": "prettier --write \"**/*.{js,json,md,yml}\"",
     "format:res": "rescript format -all",
     "start": "snowpack dev",
-    "test": "web-test-runner \"src/**/*.test.bs.js\"",
-    "test:coverage": "npm test -- --coverage"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@rescript/react": "^0.10.3",
@@ -32,12 +32,8 @@
     "@jihchi/plugin-rescript": "^1.0.0",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-react-refresh": "^2.5.0",
-    "@snowpack/web-test-runner-plugin": "^0.2.2",
-    "@testing-library/react": "^11.2.7",
-    "@web/test-runner": "^0.13.5",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
-    "chai": "^4.3.4",
     "prettier": "^2.3.0",
     "rescript": "^9.1.3",
     "snowpack": "~3.0"
