--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "snowpack build",
-    "clean": "rescript clean -with-deps",
+    "clean": "rescript clean",
     "format": "npm run format:js && npm run format:res",
     "format:js": "prettier --write \"**/*.{js,json,md,yml}\"",
     "format:res": "rescript format -all",
@@ -23,8 +23,8 @@
   "dependencies": {
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
-    "dompurify": "^2.2.8",
-    "marked": "^2.0.6",
+    "dompurify": "^2.2.9",
+    "marked": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -34,8 +34,8 @@
     "@snowpack/plugin-react-refresh": "^2.5.0",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
-    "prettier": "^2.3.0",
-    "rescript": "^9.1.3",
+    "prettier": "^2.3.1",
+    "rescript": "^9.1.4",
     "snowpack": "~3.0"
   },
   "prettier": {
