--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react"
   ],
   "scripts": {
-    "build": "snowpack build",
-    "clean": "rescript clean",
+    "build": "vite build",
+    "clean": "rescript clean -with-deps",
     "format": "npm run format:js && npm run format:res",
     "format:js": "prettier --write \"**/*.{js,json,md,yml}\"",
     "format:res": "rescript format -all",
-    "start": "snowpack dev",
+    "serve": "vite preview",
+    "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -29,14 +30,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@jihchi/plugin-rescript": "^1.0.0",
-    "@snowpack/plugin-dotenv": "^2.1.0",
-    "@snowpack/plugin-react-refresh": "^2.5.0",
+    "@jihchi/vite-plugin-rescript": "^1.1.0",
+    "@vitejs/plugin-react-refresh": "^1.3.5",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
     "prettier": "^2.3.1",
     "rescript": "^9.1.4",
-    "snowpack": "~3.0"
+    "vite": "^2.4.3"
   },
   "prettier": {
     "singleQuote": true,
