--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
+	compileOnly 'org.mapstruct:mapstruct'
+	compileOnly 'org.projectlombok:lombok-mapstruct-binding'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
+
+	annotationProcessor "org.mapstruct:mapstruct-processor"
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding"
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
