--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/dist
+node_modules
+dist
+next
 
 # IDEs and editors
 /.idea
