--- a/web/package.json
+++ b/web/package.json
@@ -26,5 +26,9 @@
     "next": "^12.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.33",
+    "typescript": "^4.4.4"
   }
 }
