--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,14 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.10.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.33",
+    "babel-jest": "^27.3.1",
+    "jest": "^27.3.1",
     "typescript": "^4.4.4"
   }
 }
