--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -17,7 +17,21 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "src",
+    "paths": {
+      "@Components/*": ["common/components/*"],
+      "@Helpers/*": ["common/helpers/*"],
+      "@Hooks/*": ["common/hooks/*"],
+      "@Redux/*": ["common/redux/*"],
+      "@Services/*": ["common/services/*"],
+      "@Interfaces/*": ["common/interfaces/*"],
+      "@Libs/*": ["common/libs/*"],
+      "@Config/*": ["common/config/*"],
+      "@Contexts/*": ["common/contexts/*"],
+      "@Api/*": ["common/api/*"],
+      "@Modules/*": ["modules/*"],
+    }
   },
   "include": [
     "next-env.d.ts",
