--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+.fable/
+*.fs.js
+*.fs.js.map
+.fake/
+.farmer/
+.idea/
+.ionide/
+.vs/
+deploy/
+obj/
+bin/
+output/
+packages/
+paket-files/
+node_modules/
+release.cmd
+release.sh
+*.orig
+*.DotSettings.user
+
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
