milestone: wip installing fable.reactstrap

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ release.cmd
 release.sh
 *.orig
 *.DotSettings.user
+*.fsproj.user
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
