--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.10.0",
-        "react": "^16.10.2",
-        "react-dom": "^16.10.2",
         "remotedev": "^0.2.9",
         "sass": "^1.34.0",
         "sass-loader": "^9.0.3",
@@ -21,5 +19,11 @@
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9",
         "webpack-dev-server": "^3.8.2"
+    },
+    "dependencies": {
+        "bulma": "^0.9.3",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "reactstrap": "^9.0.1"
     }
 }
