--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   args: ^2.0.0
   corsac_jwt: ^1.0.0-nullsafety.1
   dotenv: ^3.0.0
+  email_validator: ^2.0.1
   postgres: ^2.4.3
   shelf: ^1.1.0
   shelf_router: ^1.0.0
