Containerize the application (#4)
* Containerize the application

* Fix code analyze error

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
 AUTH_SECRET_KEY=secret
 AUTH_ISSUER=https://conduit/api
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=conduit_test
 DB_USER=postgres
 DB_PASSWORD=postgres
+DB_NAME=conduit_test
 PORT=8080
