--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 AUTH_SECRET_KEY=secret
 AUTH_ISSUER=https://conduit/api
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=conduit_dev
 DB_USER=postgres
 DB_PASSWORD=postgres
+DB_NAME=conduit_dev
 PORT=8080
