--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   postgres: ^2.4.3
   shelf: ^1.1.0
   shelf_router: ^1.0.0
+  slugify: ^2.0.0
 
 dev_dependencies:
   http: ^0.13.0
