--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
+# compiled output
 /node_modules
 /dist
 
@@ -21,13 +21,21 @@
 !.vscode/extensions.json
 .history/*
 
-
 #System Files
 .DS_Store
 Thumbs.db
-
 
 #log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Logs
+logs
+*.log
+pnpm-debug.log*
+lerna-debug.log*
+
+# Tests
+/coverage
+/.nyc_output
