--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "real-world",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "description": "An API for publishing and reading articles.",
+  "author": "Vinícius Vargas",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -14,17 +14,18 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch --noStackTrace --collectCoverage=false --reporters jest-silent-reporter",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config src/test/acceptance/jest-e2e.json"
+    "test": "yarn test:all",
+    "test:unit": "jest --config src/test/unit/unit.config.ts",
+    "test:watch": "jest --config src/test/unit/unit.config.ts --watch",
+    "test:acceptance": "jest --config src/test/acceptance/acceptance.config.ts",
+    "test:all": "jest --config src/test/local/local.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -32,48 +33,27 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@golevelup/ts-jest": "^0.3.2",
     "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "axios": "^0.26.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "jest-silent-reporter": "^0.5.0",
+    "jest": "^27.5.1",
     "lorem-ipsum": "^2.0.4",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "sqlite3": "^5.0.3",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.(test|spec|unit)\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
