--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "src/test", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "src/test", "dist", "**/*unit.ts", "**/*spec.ts"]
 }
