--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc",
         "debug": "node --inspect ./build/Index.js",
-        "start": "node ./build/Index.js",
+        "start": "node ./build/src/Index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "clean": "rm -rf build/*",
         "lint": "eslint . --ext .ts",
@@ -25,10 +25,14 @@
         "@types/node": "^17.0.21",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.3",
+        "helmet": "^5.0.2",
         "knex": "^1.0.4",
         "pg": "^8.7.3",
+        "reflect-metadata": "^0.1.13",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
