--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -37,9 +38,11 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.19",
     "@nestjs/cli": "^8.2.4",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -59,6 +62,7 @@
     "jest": "^27.5.1",
     "lorem-ipsum": "^2.0.4",
     "prettier": "^2.3.2",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "source-map-support": "^0.5.20",
     "sqlite3": "^5.0.3",
     "ts-jest": "^27.1.4",
