--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
+    "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -51,8 +51,8 @@
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.0.0",
+    "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "axios": "^0.26.1",
