--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,11 +7,16 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="ClientComponents/NonLoginLayout.fs" />
+        <Compile Include="ClientComponents/LoginForm.fs" />
         <Compile Include="Index.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Shared\Shared.fsproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="ClientComponents" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
