--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,10 @@
-NODE_ENV=development
+NODE_ENV=
+DEBUG=0
 
 PORT=3000
 
-DATABASE_URL=postgres://postgres:password@localhost:5432/database-name
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_NAME=
