--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -1,19 +1,19 @@
 version: '3'
 
 services:
-  app-name:
+  conduit-backend:
     entrypoint: /bin/sh './entrypoint.sh'
     env_file:
       - .env
     ports:
       - "9229:9229"
     networks:
-      - app-network
+      - conduit-network
     depends_on:
       - postgres
 
   postgres:
-    container_name: app_db
+    container_name: conduit_database
     image: postgres:14.2-alpine
     restart: always
     environment:
@@ -25,10 +25,10 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
     networks:
-      - app-network
+      - conduit-network
 
 networks:
-  app-network:
+  conduit-network:
     external: true
 
 volumes:
