--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-  app-name:
+  conduit-backend:
     entrypoint: /bin/sh './entrypoint-prod.sh'
-    container_name: app_name
+    container_name: conduit_backend
     build: .
     ports:
       - "3000:3000"
