Update to Hexagon 2.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,19 @@
-#
-# Build script variables
-#
 
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
+org.gradle.logging.level=warn
+org.gradle.warning.mode=all
+org.gradle.console=plain
 org.gradle.parallel=true
+
+# Gradle
+version=1.0
+group=com.hexagonkt.realworld
+description=Real World Implementation
+
 kotlin.code.style=official
+gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/2.0.10/gradle
 
-gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/1.6.0/gradle
+hexagonVersion=2.0.10
 
-hexagonVersion=1.6.0
-
-kotlinxHtmlVersion=0.7.3
-javaJwtVersion=3.18.3
+kotlinxHtmlVersion=0.7.5
+javaJwtVersion=3.19.2
