--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"./**/*.{ts,json}\"",
+    "format": "prettier --write .",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -59,9 +59,9 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.3.2",
     "jest": "^27.5.1",
     "lorem-ipsum": "^2.0.4",
-    "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.4",
     "source-map-support": "^0.5.20",
     "sqlite3": "^5.0.3",
