--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write .",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start": "NODE_ENV=development nest start",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write .",
     "test": "yarn test:all",
     "test:unit": "jest --config src/test/unit/unit.config.ts",
     "test:watch": "jest --config src/test/unit/unit.config.ts --watch",
     "test:acceptance": "jest --config src/test/acceptance/acceptance.config.ts",
-    "test:all": "jest --config src/test/local/local.config.ts"
+    "test:all": "jest --config src/test/local/local.config.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -38,8 +39,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "0.3.6",
+    "pg": "^8.4.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
@@ -50,7 +51,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.11.10",
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -67,8 +68,9 @@
     "sqlite3": "^5.0.3",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "10.7.0",
+    "swagger-ui-express": "^4.3.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "4.5.2"
   }
 }
