--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,6 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
-/node_modules
-/dist
-/documentation
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-#System Files
-.DS_Store
-Thumbs.db
-
-#log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Logs
-logs
-*.log
-pnpm-debug.log*
-lerna-debug.log*
-
-# Tests
-**/coverage*
-/.nyc_output
-
-# Temporally databases
-**/*.sqlite3
+.idea/
+.vscode/
+dist/
+node_modules/
+.DS_Store/
+local.sqlite3
