User login 기능 구현  - 아직 jwt 토큰 부분 구현안됨

--- a/realworld/src/main/resources/application.yaml
+++ b/realworld/src/main/resources/application.yaml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: "jdbc:h2:file:./db;DATABASE_TO_LOWER=TRUE;"
@@ -16,5 +17,7 @@ spring:
   h2:
     console:
       enabled: true
-
+logging:
+  level:
+    org.springframework.security: trace
 
