--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "0.3.6",
-    "pg": "^8.4.0"
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
@@ -65,10 +66,10 @@
     "prettier-plugin-organize-imports": "^2.3.4",
     "source-map-support": "^0.5.20",
     "sqlite3": "^5.0.3",
+    "swagger-ui-express": "^4.3.0",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.3",
     "ts-node": "10.7.0",
-    "swagger-ui-express": "^4.3.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "4.5.2"
   },
