GET /api/user 구현  - JwtAuthenticationFilter에서 UserRepository 이용  - change JwtAuthenticationToken    - principal type(String -> Object)    - field name(String detail -> token)

--- a/realworld/src/main/resources/application.yaml
+++ b/realworld/src/main/resources/application.yaml
@@ -21,3 +21,9 @@ logging:
   level:
     org.springframework.security: trace
 
+jwt:
+  client-secret: my-real-world
+  header: Authorization
+  issuer: geuno
+  expiry-seconds: 300
+
