test: UserRestControllerTest 구성

--- a/realworld/src/main/resources/application.yaml
+++ b/realworld/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ spring:
   h2:
     console:
       enabled: true
-logging:
-  level:
-    org.springframework.security: trace
+#logging:
+#  level:
+#    org.springframework.security : trace
 
 jwt:
   client-secret: my-real-world
