refactor: rename index into Conduit

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -9,7 +9,7 @@
         <None Include="paket.references" />
         <Compile Include="ClientComponents/NonLoginLayout.fs" />
         <Compile Include="ClientComponents/LoginForm.fs" />
-        <Compile Include="Index.fs" />
+        <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
