refactor: reorg files in client project

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -8,6 +8,7 @@
         <None Include="index.html" />
         <None Include="paket.references" />
         <Compile Include="Components/NonLoginLayout.fs" />
+        <Compile Include="Components/LoginLayout.fs" />
         <Compile Include="Components/LoginForm.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
