--- a/src/Server/Properties/launchSettings.json
+++ b/src/Server/Properties/launchSettings.json
@@ -18,10 +18,11 @@
     "Server": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "http://localhost:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "ttp://localhost:8085"
     }
   }
 }
