--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react"
   ],
   "engines": {
-    "node": "14",
-    "npm": "7"
+    "node": "^16",
+    "npm": "^8"
   },
   "scripts": {
     "build": "vite build",
@@ -28,19 +28,19 @@
   "dependencies": {
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
-    "dompurify": "^2.3.6",
-    "marked": "^4.0.12",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "dompurify": "^2.3.8",
+    "marked": "^4.0.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@jihchi/vite-plugin-rescript": "^2.0.2",
+    "@jihchi/vite-plugin-rescript": "^3.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
-    "prettier": "^2.6.1",
+    "prettier": "^2.7.1",
     "rescript": "^9.1.4",
-    "vite": "^2.9.1"
+    "vite": "^2.9.14"
   },
   "prettier": {
     "singleQuote": true,
