Upgrade rescript to v10

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "bs-fetch": "^0.6.2",
     "bs-webapi": "^0.19.1",
     "prettier": "^2.7.1",
-    "rescript": "^9.1.4",
+    "rescript": "^10.0.0-alpha.1",
     "vite": "^2.9.14"
   },
   "prettier": {
