--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 
 org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
 org.gradle.logging.level=warn
@@ -11,9 +12,10 @@ group=com.hexagonkt.realworld
 description=Real World Implementation
 
 kotlin.code.style=official
-gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/2.0.16/gradle
+gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/2.0.17/gradle
 
-hexagonVersion=2.0.16
+hexagonVersion=2.0.17
+hexagonExtraVersion=2.0.16
 
 kotlinxHtmlVersion=0.7.5
 javaJwtVersion=3.19.2
