phase 1: continue fixing UI

--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
     "build": "solid-start build",
     "start": "solid-start start",
     "postinstall": "node ./scripts/fix-jest-dom.mjs",
+    "typecheck": "tsc -b",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx .",
+    "lintfix": "eslint --ext js,jsx,ts,tsx . --fix",
     "test": "vitest run"
   },
   "type": "module",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@types/testing-library__jest-dom": "^5.14.3",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-solid": "^0.7.1",
     "jsdom": "^19.0.0",
+    "prettier": "^2.7.1",
     "solid-app-router": "^0.4.1",
     "solid-js": "^1.4.0",
     "solid-meta": "^0.27.3",
