phase 1: cover most functions on front end

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
+    "@types/marked": "^4.0.3",
     "@types/testing-library__jest-dom": "^5.14.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
@@ -36,5 +37,8 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "dependencies": {
+    "marked": "^4.0.18"
   }
 }
