phase 1: fixed localstorage ssr issue

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node": ">=14"
   },
   "dependencies": {
-    "marked": "^4.0.18"
+    "marked": "^4.0.18",
+    "solid-devtools": "^0.8.0"
   }
 }
