feat: halfway home page

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -11,6 +11,7 @@
         <Compile Include="Components/LoginLayout.fs" />
         <Compile Include="Components/LoginForm.fs" />
         <Compile Include="Components\RegisterForm.fs" />
+        <Compile Include="Components\GuestHome.fs" />
         <Compile Include="Conduit.fs" />
         <Compile Include="App.fs" />
     </ItemGroup>
