feat: this is the last time continue with own effort. After this, go with template from Zaid Ajaj

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <None Include="index.html" />
         <None Include="paket.references" />
+        <Compile Include="Exension.fs" />
         <Compile Include="Components\LayoutGuess.fs" />
         <Compile Include="Components\LayoutLoggedIn.fs" />
         <Compile Include="Components\PageRegister.fs" />
