feat: login without API done

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -12,7 +12,7 @@
         <Compile Include="Components\LayoutGuess.fs" />
         <Compile Include="Components\LayoutLoggedIn.fs" />
         <Compile Include="Components\PageRegister.fs" />
-        <Compile Include="Components\PageGuestHome.fs" />
+        <Compile Include="Components\PageHome.fs" />
         <Compile Include="Components\PageLogin.fs" />
         <Compile Include="Components\PageLoggedInHome.fs" />
         <Compile Include="Conduit.fs" />
