--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ gradleScripts=https://raw.githubusercontent.com/hexagonkt/hexagon/2.0.26/gradle
 hexagonVersion=2.0.26
 hexagonExtraVersion=2.0.26
 javaJwtVersion=4.1.0
+
+testcontainersVersion=1.17.5
