--- a/src/Core/RealWorld.Conduit.Domain/RealWorld.Conduit.Domain.csproj
+++ b/src/Core/RealWorld.Conduit.Domain/RealWorld.Conduit.Domain.csproj
@@ -4,11 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Conduit.Core</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Entities\" />
-  </ItemGroup>
 
 </Project>
