--- a/src/Infrastructure/RealWorld.Conduit.Infrastructure/RealWorld.Conduit.Infrastructure.csproj
+++ b/src/Infrastructure/RealWorld.Conduit.Infrastructure/RealWorld.Conduit.Infrastructure.csproj
@@ -11,7 +11,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services"/>
+    <Folder Include="Common\Extensions"/>
+    <Folder Include="Common\Services"/>
+    <Folder Include="Configuration"/>
+    <Folder Include="Identity"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.10"/>
+    <PackageReference Include="Roslynator.Analyzers" Version="4.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.47.0.55603">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
