--- a/src/Presentation/RealWorld.Conduit.WebApi/RealWorld.Conduit.WebApi.csproj
+++ b/src/Presentation/RealWorld.Conduit.WebApi/RealWorld.Conduit.WebApi.csproj
@@ -7,6 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.10"/>
+    <PackageReference Include="Roslynator.Analyzers" Version="4.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.47.0.55603">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
   </ItemGroup>
 
@@ -15,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configurations"/>
+    <Folder Include="Configuration"/>
     <Folder Include="Exceptions"/>
     <Folder Include="Extensions"/>
     <Folder Include="Middlewares"/>
